add simple plugin implementation